Potential fix for code scanning alert no. 22: Deprecated method or constructor invocation
Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>